[gd_scene load_steps=30 format=3 uid="uid://bxwe57hje8ylb"]

[ext_resource type="AudioStream" uid="uid://c03rhwbolijlq" path="res://Audio/429081__leonelmail__soft-rain-interior-perspective.mp3" id="1_n74oy"]
[ext_resource type="PackedScene" uid="uid://bnmrawfsklmac" path="res://Scenes/GameComponents/player.tscn" id="2_3uuok"]
[ext_resource type="AudioStream" uid="uid://kq12f6p1q5oh" path="res://Audio/444434__mtjohnson__picking-up-dollar.wav" id="2_cmern"]
[ext_resource type="Script" path="res://Scenes/WorldManager.gd" id="3_uf1g1"]
[ext_resource type="Script" path="res://Scripts/UserInterface.gd" id="5_37kt8"]
[ext_resource type="PackedScene" uid="uid://balqifmqnqcfu" path="res://Scenes/GameComponents/inventory.tscn" id="5_ucsgv"]
[ext_resource type="PackedScene" uid="uid://c6xmrmvm3ncx3" path="res://Scenes/GameComponents/DialogueBox.tscn" id="7_5x1gc"]
[ext_resource type="PackedScene" uid="uid://t7ayq0f6p51y" path="res://Scenes/GameComponents/interactable.tscn" id="9_0g3i8"]
[ext_resource type="Script" path="res://Scenes/GameComponents/InteractableReceive.gd" id="10_2r6ix"]
[ext_resource type="Texture2D" uid="uid://n2pjxycm5xsb" path="res://Sprites/Items/Trashcan.png" id="11_62xf5"]
[ext_resource type="Script" path="res://Scenes/GameComponents/InteractableUse.gd" id="12_7dcgn"]
[ext_resource type="Texture2D" uid="uid://i2b2m7rjleg2" path="res://Sprites/Items/Toy.png" id="13_ptjoi"]
[ext_resource type="Script" path="res://Scenes/GameComponents/InteractablePickup.gd" id="14_r08xe"]
[ext_resource type="Texture2D" uid="uid://dm3ghdde1ehly" path="res://Sprites/Items/Pliers.png" id="15_l12av"]
[ext_resource type="PackedScene" uid="uid://l2b4a6aijqkb" path="res://Scenes/settings_menu.tscn" id="16_r0pys"]
[ext_resource type="Texture2D" uid="uid://dd2s6kvpyn6gh" path="res://Sprites/Items/Drawing.png" id="16_ybnjc"]
[ext_resource type="Texture2D" uid="uid://dcr2ymo1cc0mw" path="res://Sprites/Items/ShelfStanding.png" id="17_qmsgf"]
[ext_resource type="Texture2D" uid="uid://cs6axd7ech1my" path="res://Sprites/Items/Hammer.png" id="18_56mxo"]
[ext_resource type="Texture2D" uid="uid://dj53chkydp5rs" path="res://Sprites/UI/SettingsIcon.png" id="18_llvg5"]
[ext_resource type="Script" path="res://Scenes/GameComponents/InteractableDoor.gd" id="19_aicmy"]
[ext_resource type="Texture2D" uid="uid://c4o640x48wm5m" path="res://Sprites/Environment/Kitchen.png" id="20_0dgyv"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ugppo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bdajc"]
size = Vector2(108, 170.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbcrx"]
size = Vector2(69, 94.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ixjw"]
size = Vector2(58, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v2ux1"]
size = Vector2(246, 516)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3y1p"]
size = Vector2(364, 460.5)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_skxyq"]
vertices = PackedVector2Array(1871, 694, 1866, 641, 1919, 639, 1915, 1076, 1608, 692, 2, 1069, 2, 877, 1284, 699, 357, 634, 643, 637, 641, 696, 1284, 635, 1602, 635)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 0, 3, 5, 6, 7), PackedInt32Array(8, 9, 10, 6), PackedInt32Array(7, 11, 12, 4), PackedInt32Array(10, 7, 6)])
outlines = Array[PackedVector2Array]([PackedVector2Array(641, 696, 643, 637, 357, 634, 2, 877, 2, 1069, 1915, 1076, 1919, 639, 1866, 641, 1871, 694, 1608, 692, 1602, 635, 1284, 635, 1284, 699)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_mtysg"]
vertices = PackedVector2Array(325.807, 99, 959.694, 104, 954.193, 534, 321.528, 161, -320.917, 163, -959.083, 532, -959.083, 342, -604.546, 94, -320.917, 101)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 3, 2, 5, 6), PackedInt32Array(4, 6, 7, 8)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-604.546, 94, -959.083, 342, -959.083, 532, 954.193, 534, 959.694, 104, 325.807, 99, 321.528, 161, -320.917, 163, -320.917, 101)])

[node name="World" type="Node2D"]

[node name="WorldManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_uf1g1")

[node name="Audio" type="Node" parent="."]

[node name="RainAmbience" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("1_n74oy")
autoplay = true
bus = &"Music"

[node name="PickingUpDrawing" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("2_cmern")
bus = &"SoundEffects"

[node name="Player" parent="." instance=ExtResource("2_3uuok")]
z_index = 1
position = Vector2(1188, 822)

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080

[node name="UserInterface" type="CanvasLayer" parent="."]
script = ExtResource("5_37kt8")

[node name="Inventory" parent="UserInterface" instance=ExtResource("5_ucsgv")]
offset_left = 28.0
offset_top = 1.0
offset_right = 28.0
offset_bottom = 1.0
mouse_filter = 0

[node name="DialogueBox" parent="UserInterface" instance=ExtResource("7_5x1gc")]
visible = false

[node name="useItemSprite" type="Sprite2D" parent="UserInterface"]
z_index = 1
y_sort_enabled = true

[node name="SettingsButton" type="TextureButton" parent="UserInterface"]
offset_left = 1792.0
offset_top = 952.0
offset_right = 1920.0
offset_bottom = 1080.0
texture_normal = ExtResource("18_llvg5")

[node name="SettingsMenu" parent="UserInterface" instance=ExtResource("16_r0pys")]
visible = false

[node name="ItemMarker" type="Sprite2D" parent="."]
visible = false
texture = SubResource("CompressedTexture2D_ugppo")
hframes = 8
vframes = 8
frame = 18

[node name="Interactions" type="Node" parent="."]

[node name="Interactable_Trash" parent="Interactions" instance=ExtResource("9_0g3i8")]
position = Vector2(542, 606)
script = ExtResource("10_2r6ix")
ReceiveItemName = "Ball"
ReceiveItemDescription = "small bouncy Ball"
Interact_Name = "Trash"
Examine_Text = "res://ExamineText/Trash.json"
firstInteraction_Text = "res://ExamineText/TrashFirstInteraction.json"
firstInteraction = true

[node name="CollisionShape2D" parent="Interactions/Interactable_Trash" index="0"]
position = Vector2(4, 5.25)
shape = SubResource("RectangleShape2D_bdajc")

[node name="Sprite2D" parent="Interactions/Interactable_Trash" index="1"]
y_sort_enabled = true
position = Vector2(409, -78)
texture = ExtResource("11_62xf5")
hframes = 1
vframes = 1
frame = 0

[node name="Label" parent="Interactions/Interactable_Trash" index="2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -17.0
offset_top = 4.0
offset_right = 23.0
offset_bottom = 27.0
grow_horizontal = 2

[node name="Interactable_Toy" parent="Interactions" instance=ExtResource("9_0g3i8")]
position = Vector2(334, 865)
script = ExtResource("12_7dcgn")
Used_Item = "Hammer"
Use_Dialogue = "res://ExamineText/ToyUse.json"
Didnt_Use_Dialogue = "res://ExamineText/ToyNotUsed.json"
ReceiveItemName = "Spring"
ReceiveItemDescription = "rusty spring"
Interact_Name = "Toy"
Examine_Text = "res://ExamineText/Toy.json"
firstInteraction_Text = "res://ExamineText/ToyFirstInteraction.json"
firstInteraction = true

[node name="CollisionShape2D" parent="Interactions/Interactable_Toy" index="0"]
position = Vector2(-37.5, -1.625)
shape = SubResource("RectangleShape2D_gbcrx")

[node name="Sprite2D" parent="Interactions/Interactable_Toy" index="1"]
y_sort_enabled = true
position = Vector2(122, -244)
texture = ExtResource("13_ptjoi")
hframes = 1
vframes = 1
frame = 0

[node name="Label" parent="Interactions/Interactable_Toy" index="2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.0
offset_top = 49.0
offset_right = -23.0
offset_bottom = 72.0
grow_horizontal = 2

[node name="Interactable_Pliers" parent="Interactions" instance=ExtResource("9_0g3i8")]
visible = false
position = Vector2(1079, 825)
script = ExtResource("14_r08xe")
Item_Description = "some old Pliers"
Interact_Name = "Pliers"
Examine_Text = "res://ExamineText/Pliers.json"

[node name="CollisionShape2D" parent="Interactions/Interactable_Pliers" index="0"]
position = Vector2(0.5, -6)
shape = SubResource("RectangleShape2D_1ixjw")

[node name="Sprite2D" parent="Interactions/Interactable_Pliers" index="1"]
position = Vector2(-1, -3)
texture = ExtResource("15_l12av")
hframes = 1
vframes = 1
frame = 0

[node name="Label" parent="Interactions/Interactable_Pliers" index="2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.5
offset_top = -4.0
offset_right = 20.5
offset_bottom = 19.0
grow_horizontal = 2

[node name="Interactable_Drawing" parent="Interactions" node_paths=PackedStringArray("SoundEffect") instance=ExtResource("9_0g3i8")]
position = Vector2(1064, 814)
script = ExtResource("14_r08xe")
Item_Description = "Tom's drawing"
Interact_Name = "Drawing"
Examine_Text = "res://Dialogue/Drawing.json"
DialogueBox = true
SoundEffect = NodePath("../../Audio/PickingUpDrawing")

[node name="CollisionShape2D" parent="Interactions/Interactable_Drawing" index="0"]
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_1ixjw")

[node name="Sprite2D" parent="Interactions/Interactable_Drawing" index="1"]
y_sort_enabled = true
position = Vector2(-266, -350)
texture = ExtResource("16_ybnjc")
hframes = 1
vframes = 1
frame = 0

[node name="Label" parent="Interactions/Interactable_Drawing" index="2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -10.0
offset_top = 25.0
offset_right = 30.0
offset_bottom = 48.0
grow_horizontal = 2

[node name="Interactable_Shelf" parent="Interactions" instance=ExtResource("9_0g3i8")]
position = Vector2(1776, 550)
script = ExtResource("12_7dcgn")
Used_Item = "Ball"
Use_Dialogue = "res://ExamineText/ShelfUse.json"
Didnt_Use_Dialogue = "res://ExamineText/ShelfNotUsed.json"
ReceiveItemName = "null"
ReceiveItemDescription = "null"
Interact_Name = "Shelf"
Examine_Text = "res://ExamineText/Shelf.json"
firstInteraction_Text = "res://Dialogue/Shelf.json"
firstInteraction = true
firstInteractionDialogueBox = true
DialogueBox = true

[node name="CollisionShape2D" parent="Interactions/Interactable_Shelf" index="0"]
position = Vector2(-35, -123)
shape = SubResource("RectangleShape2D_v2ux1")

[node name="Sprite2D" parent="Interactions/Interactable_Shelf" index="1"]
position = Vector2(1, 2)
texture = ExtResource("17_qmsgf")
hframes = 1
vframes = 1
frame = 0

[node name="Label" parent="Interactions/Interactable_Shelf" index="2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = -138.0
offset_right = -5.0
offset_bottom = -103.0
grow_horizontal = 2

[node name="Interactable_Hammer" parent="Interactions" instance=ExtResource("9_0g3i8")]
position = Vector2(1666, 177)
script = ExtResource("14_r08xe")
Item_Description = "Hammer"
Interact_Name = "Hammer"
Examine_Text = "res://ExamineText/Hammer.json"

[node name="CollisionShape2D" parent="Interactions/Interactable_Hammer" index="0"]
position = Vector2(4, -6)
shape = SubResource("RectangleShape2D_1ixjw")

[node name="Sprite2D" parent="Interactions/Interactable_Hammer" index="1"]
position = Vector2(-1, -3)
texture = ExtResource("18_56mxo")
hframes = 1
vframes = 1
frame = 0

[node name="Label" parent="Interactions/Interactable_Hammer" index="2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.5
offset_top = -4.0
offset_right = 20.5
offset_bottom = 19.0
grow_horizontal = 2

[node name="Interactable_RightDoorKitchen" parent="Interactions" node_paths=PackedStringArray("newDoorLocation") instance=ExtResource("9_0g3i8")]
position = Vector2(1463, 713)
script = ExtResource("19_aicmy")
newDoorLocation = NodePath("../../Cafeteria/LeftDoor")
unlocked = false
limitBot = 1080
limitTop = 0
limitLeft = 2183
limitRight = 4684
scene_path = "res://Scenes/Cafeteria.tscn"
Used_Item = "SpringKey"
Use_Dialogue = "res://ExamineText/DoorUse.json"
Didnt_Use_Dialogue = "res://ExamineText/DoorNotUsed.json"
ReceiveItemName = "null"
ReceiveItemDescription = "null"
Interact_Name = "Door"
Examine_Text = "res://ExamineText/Door.json"
firstInteraction_Text = "res://Dialogue/Shelf.json"

[node name="CollisionShape2D" parent="Interactions/Interactable_RightDoorKitchen" index="0"]
position = Vector2(-4, -315.75)
shape = SubResource("RectangleShape2D_v2ux1")

[node name="Sprite2D" parent="Interactions/Interactable_RightDoorKitchen" index="1"]
position = Vector2(-483, -177)
hframes = 1
vframes = 1
frame = 0

[node name="Label" parent="Interactions/Interactable_RightDoorKitchen" index="2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_top = -278.0
offset_right = 19.0
offset_bottom = -243.0
grow_horizontal = 2

[node name="Interactable_LeftDoorCaf" parent="Interactions" node_paths=PackedStringArray("newDoorLocation") instance=ExtResource("9_0g3i8")]
position = Vector2(2467, 807)
script = ExtResource("19_aicmy")
newDoorLocation = NodePath("../../Kitchen/RightDoor")
unlocked = true
limitBot = 1080
limitTop = 0
limitLeft = 0
limitRight = 1920
scene_path = ""
Used_Item = "null"
Use_Dialogue = "null"
Didnt_Use_Dialogue = "null"
ReceiveItemName = "null"
ReceiveItemDescription = "null"
Interact_Name = "Door"

[node name="CollisionShape2D" parent="Interactions/Interactable_LeftDoorCaf" index="0"]
position = Vector2(-29, -334.25)
shape = SubResource("RectangleShape2D_j3y1p")

[node name="Sprite2D" parent="Interactions/Interactable_LeftDoorCaf" index="1"]
position = Vector2(-483, -177)
hframes = 1
vframes = 1
frame = 0

[node name="Label" parent="Interactions/Interactable_LeftDoorCaf" index="2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_top = -278.0
offset_right = 19.0
offset_bottom = -243.0
grow_horizontal = 2

[node name="Kitchen" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("20_0dgyv")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Kitchen"]
position = Vector2(-960, -540)
navigation_polygon = SubResource("NavigationPolygon_skxyq")

[node name="LeftDoor" type="Marker2D" parent="Kitchen"]
position = Vector2(-689, 191)

[node name="RightDoor" type="Marker2D" parent="Kitchen"]
position = Vector2(481, 137)

[node name="Cafeteria" type="Sprite2D" parent="."]
position = Vector2(3436.5, 550.5)
scale = Vector2(1.3099, 1.01574)
texture = ExtResource("20_0dgyv")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Cafeteria"]
navigation_polygon = SubResource("NavigationPolygon_mtysg")

[node name="LeftDoor" type="Marker2D" parent="Cafeteria"]
position = Vector2(-699.293, 200)

[node name="RightDoor" type="Marker2D" parent="Cafeteria"]
position = Vector2(505.521, 143)

[connection signal="mouse_entered" from="UserInterface/Inventory" to="UserInterface" method="_on_inventory_mouse_entered"]
[connection signal="mouse_exited" from="UserInterface/Inventory" to="UserInterface" method="_on_inventory_mouse_exited"]
[connection signal="focus_entered" from="UserInterface/SettingsButton" to="UserInterface" method="_on_settings_button_focus_entered"]
[connection signal="focus_exited" from="UserInterface/SettingsButton" to="UserInterface" method="_on_settings_button_focus_exited"]
[connection signal="pressed" from="UserInterface/SettingsButton" to="UserInterface" method="_on_settings_button_pressed"]

[editable path="Interactions/Interactable_Trash"]
[editable path="Interactions/Interactable_Toy"]
[editable path="Interactions/Interactable_Pliers"]
[editable path="Interactions/Interactable_Drawing"]
[editable path="Interactions/Interactable_Shelf"]
[editable path="Interactions/Interactable_Hammer"]
[editable path="Interactions/Interactable_RightDoorKitchen"]
[editable path="Interactions/Interactable_LeftDoorCaf"]
